[package]
name = "humberto"
version = "0.1.0"
authors = ["Ella Duivenvoorden <whohasthenapkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
chrono = "0.4.19"
envy = "0.4"
log = {version = "0.4.14", features = ["kv_unstable_std"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.10"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.23"
tracing-subscriber = "0.2"